tests/expectations/compiler/structs/global_shadow_struct_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372007]: struct `s1` shadowed by
    --> compiler-test:9:5
     |
   9 |     struct s1 {
  10 |         f1: u32,
  11 |         f2: u32,
  12 |         f3: u32
  13 |     }
     |     ^
"""]
